--- a/install
+++ b/install
@@ -8,7 +8,7 @@
 
 dir=~/dotfiles                    # dotfiles directory
 olddir=~/dotfiles_old             # old dotfiles backup directory
-files="bashrc bash_profile inputrc tmux.conf vimrc vim zshrc oh-my-zs powerline"    # list of files/folders to symlink in homedir
+files="bash_profile bashrc dotfilesrc inputrc iterm2 java lc3 mybashrc npm oh-my-zsh out powerline tmux.conf vim vimrc ycm_extra_conf.py zsh zshrc"  # list of files/folders to symlink in homedir
 
 ##########
 
